--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  width: 100%;
+  width: 910px;
 }
 
 header {
@@ -60,7 +60,6 @@ header {
   padding-top: 5px;
   padding-bottom: 5px;
 }
-
 
 .performance-billing-container table {
   margin-top: 50px;
