--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
 }
 
 .sales-info-table tr td {
-  font-size: 18px;
+  font-size: 12px;
   padding-top: 5px;
   padding-bottom: 5px;
 }
@@ -56,9 +56,13 @@ header {
 
 .__table-title h2 {
   text-align: center;
-  font-size: 18px;
+  font-size: 12px;
   padding-top: 5px;
   padding-bottom: 5px;
+}
+
+.__company-logo {
+  width: 120px;
 }
 
 .performance-billing-container table {
@@ -117,7 +121,7 @@ th {
 }
 
 thead tr td {
-  font-size: 16px;
+  font-size: 12px;
   text-align: center;
   padding: 5px 10px;
 }
@@ -157,11 +161,11 @@ footer {
 }
 
 .font-md {
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .font-lg {
-  font-size: 22px;
+  font-size: 12px;
 }
 
 .spacing-lg {
