--- a/invoiceType2/style-invoice-v2.css
+++ b/invoiceType2/style-invoice-v2.css
@@ -28,7 +28,7 @@ header {
 }
 
 .pages {
-  height: 1287px;
+  height: 1170px;
   position: relative;
 }
 
@@ -364,6 +364,10 @@ footer {
 
 .mt-12 {
   margin-top: 3rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .gap-12 {
