--- a/invoiceType2/style-invoice-v2.css
+++ b/invoiceType2/style-invoice-v2.css
@@ -27,10 +27,18 @@ header {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.main {
+  border: 1px solid black;
+  padding-top: 60px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
 .pages {
-  height: 1170px;
+  height: 1187px;
   position: relative;
 }
+
 
 .section {
   margin-top: 2rem;
@@ -237,6 +245,7 @@ tbody tr td {
   margin-top: 50px;
   text-align: center;
   width: 100%;
+  padding-bottom: 60px;
 }
 
 footer {
@@ -366,8 +375,8 @@ footer {
   margin-top: 3rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .gap-12 {
